# efm32-template

./: .gitignore  CMakeLists.txt  makefile
cmake/: arm-gcc.cmake  efm32-base.cmake
doc/: Device_recovery.md
gecko-sdk/: Documentation.url
gecko-sdk/platform/CMSIS/: CMakeLists.txt
gecko-sdk/platform/Device/SiliconLabs/: CMakeLists.txt
gecko-sdk/platform/common/: CMakeLists.txt
gecko-sdk/platform/emlib/: CMakeLists.txt
gecko-sdk/platform/emlib/inc/: em_i2c.h  em_ldma.h
source/: main.cpp  stubs.c
source/Device/EFM32PG22/Include/: efm32pg22_emu.h  efm32pg22_eusart.h  efm32pg22_i2c.h  efm32pg22_ldma.h  efm32pg22_letimer.h  efm32pg22_msc.h  efm32pg22_pdm.h  efm32pg22_timer.h  efm32pg22_usart.h  efm32pg22_wdog.h
source/Device/EFM32PG22/Source/: startup_efm32pg22.c  system_efm32pg22.c
source/Device/EFM32PG22/Source/GCC/: startup_efm32pg22.S
svd/EFM32PG22/: EFM32PG22C200F128IM32.svd  EFM32PG22C200F128IM40.svd  EFM32PG22C200F256IM32.svd  EFM32PG22C200F256IM40.svd  EFM32PG22C200F32IM32.svd  EFM32PG22C200F32IM40.svd  EFM32PG22C200F512IM32.svd  EFM32PG22C200F64IM32.svd  EFM32PG22C200F64IM40.svd
